# fluxy

./: .gitignore  LICENSE  README.md  pyproject.toml  start_gui.py
examples/: fluxholes.py  test.oas
src/examples/: fluxholes.py
src/fluxy/design/: __init__.py  design.py  holezone.py  util.py
src/fluxy/gui/: __init__.py  holes.py  main.py
